--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
         <meta charset="utf-8">
         <title>AeroMed QMS</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> <!--Font from Google Fonts-->
+        <link rel="icon" href="img/AeromedLogo.png">
     </head>
     <body>
         <header>
+            <a href="/index.html"><img id="logo" src="img/AeromedLogo.png" alt="Aeromed Home"></a>
             <h1>AeroMedQMS</h1>
         </header>
         <main>
-
+            <nav>
+                <a href="/contact.html">Contact</a>
+                <!--
+                    Sections for:
+                    certification
+                    consultancy
+                    contact
+                -->
+            </nav>
         </main>
         <footer>
 
