create sections with corresponding webpages

--- a/certification.html
+++ b/certification.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>AeroMed QMS</title>
+        <title>Certification - AeroMed QMS</title>
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> <!--Font from Google Fonts-->
         <link rel="icon" href="img/AeromedIcon.png">
