--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>AeroMed QMS</title>
+        <title>Contact - AeroMed QMS</title>
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> <!--Font from Google Fonts-->
-        <link rel="icon" href="img/AeromedLogo.png">
+        <link rel="icon" href="img/AeromedIcon.png">
     </head>
+    <body>
+        <header>
+            <a href="/index.html"><img id="logo" src="img/logo.png" alt="Aeromed Home"></a>
+            <nav>
+                <a href="/consultancy.html">Consultancy</a>
+                <a href="/certification.html">Certification</a>
+                <a href="/contact.html">Contact</a>
+                <!--
+                    Sections for:
+                    certification
+                    consultancy
+                    contact
+                -->
+            </nav>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+    </body>
 </html>
