more header work plus a dummy section to see how other content flows. Need to stop initial content disappearing under header

--- a/certification.html
+++ b/certification.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Certification - AeroMed QMS</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> <!--Font from Google Fonts-->
-        <link rel="icon" href="img/AeromedIcon.png">
-    </head>
-    <body>
-        <header>
-            <a href="/index.html"><img id="logo" src="img/logo.png" alt="Aeromed Home"></a>
-            <nav>
-                <a href="/consultancy.html">Consultancy</a>
-                <a href="/certification.html">Certification</a>
-                <a href="/contact.html">Contact</a>
-                <!--
+
+<head>
+    <meta charset="utf-8">
+    <title>Certification - AeroMed QMS</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <!--Font from Google Fonts-->
+    <link rel="icon" href="img/AeromedIcon.png">
+</head>
+
+<body>
+    <header>
+        <a href="index.html">
+            <img id="logo" src="img/logo.png" alt="Aeromed Home">
+        </a>
+        <a id="chev-down" href="#">
+            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </a>
+        <nav>
+            <ul class="nav-bar">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="consultancy.html">Consultancy</a>
+                </li>
+                <li>
+                    <a href="certification.html">Certification</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <!--
                     Sections for:
                     certification
                     consultancy
                     contact
                 -->
-            </nav>
-        </header>
-        <main>
+        </nav>
+    </header>
+    <main>
 
-        </main>
-        <footer>
+    </main>
+    <footer>
 
-        </footer>
-    </body>
+    </footer>
+</body>
+
 </html>
