--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Font from Google Fonts-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--font awesome used for down arrow icon-->
-    <link rel="icon" href="img/AeromedIcon.png">
+    <link rel="icon" href="img/AeroMedIcon.png">
 </head>
 
 <body>
