--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <!--Font from Google Fonts-->
-    <link rel="icon" href="img/AeromedIcon.png">
+    <link rel="icon" href="img/AeroMedIcon.png">
 </head>
 
 <body>
