--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <!--Font from Google Fonts-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--font awesome used for down arrow icon-->
     <link rel="icon" href="img/AeroMedIcon.png">
 </head>
 
@@ -15,11 +17,11 @@
         <a href="index.html">
             <img id="logo" src="img/logo.png" alt="Aeromed Home">
         </a>
-        <a id="chev-down" href="#">
+        <button id="chev-down">
             <i class="fa fa-chevron-down" aria-hidden="true"></i>
-        </a>
-        <nav>
-            <ul class="nav-bar">
+        </button>
+        <nav id="nav-bar">
+            <ul>
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -47,6 +49,7 @@
     <footer>
 
     </footer>
+    <script src="scripts/navbar.js"></script>
 </body>
 
 </html>
