--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <a href="index.html">
             <img id="logo" src="img/logo.png" alt="Aeromed Home">
         </a>
-        <a id="chev-down" href="#">
+        <button id="chev-down">
             <i class="fa fa-chevron-down" aria-hidden="true"></i>
-        </a>
-        <nav>
-            <ul class="nav-bar">
+        </button>
+        <nav id="nav-bar">
+            <ul>
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -35,13 +35,6 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
-
-            <!--
-                    Sections for:
-                    certification
-                    consultancy
-                    contact
-                -->
         </nav>
     </header>
     <main>
@@ -52,6 +45,7 @@
     <footer>
 
     </footer>
+    <script src="scripts/navbar.js"></script>
 </body>
 
 </html>
