--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </nav>
     </header>
     <main>
-        <section id="picture-banner">
-            <p>Here is where a picture banner would lie</p>
-        </section>
+        <aside id="picture-banner">
+            <h2>Here is where a picture banner would lie</h2>
+        </aside>
     </main>
     <footer>
 
