--- a/certification.html
+++ b/certification.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Certification - AeroMed QMS</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--font awesome used for down arrow icon-->
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <!--Font from Google Fonts-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--font awesome used for down arrow icon-->
     <link rel="icon" href="img/AeroMedIcon.png">
 </head>
 
@@ -17,30 +17,32 @@
         <a href="index.html">
             <img id="logo" src="img/logo.png" alt="Aeromed Home">
         </a>
-        <button id="chev-down">
+        <div id="chev-down">
             <i class="fa fa-chevron-down" aria-hidden="true"></i>
-        </button>
+        </div>
         <nav id="nav-bar">
             <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="consultancy.html">Consultancy</a>
-                </li>
-                <li>
-                    <a href="certification.html">Certification</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
+                <a href="index.html">
+                    <li>
+                        Home
+                    </li>
+                </a>
+                <a href="consultancy.html">
+                    <li>
+                        Consultancy
+                    </li>
+                </a>
+                <a href="certification.html">
+                    <li>
+                        Certification
+                    </li>
+                </a>
+                <a href="contact.html">
+                    <li>
+                        Contact
+                    </li>
+                </a>
             </ul>
-            <!--
-                    Sections for:
-                    certification
-                    consultancy
-                    contact
-                -->
         </nav>
     </header>
     <main>
