--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>AeroMed QMS</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    <!--Font from Google Fonts-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--font awesome used for down arrow icon-->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/picturebanner.css">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <!--Font from Google Fonts-->
     <link rel="icon" href="img/AeroMedIcon.png">
 </head>
 
@@ -17,29 +18,43 @@
         <a href="index.html">
             <img id="logo" src="img/logo.png" alt="Aeromed Home">
         </a>
-        <button id="chev-down">
+        <div id="chev-down">
             <i class="fa fa-chevron-down" aria-hidden="true"></i>
-        </button>
+        </div>
         <nav id="nav-bar">
             <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="consultancy.html">Consultancy</a>
-                </li>
-                <li>
-                    <a href="certification.html">Certification</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
+                <a href="index.html">
+                    <li>
+                        Home
+                    </li>
+                </a>
+                <a href="consultancy.html">
+                    <li>
+                        Consultancy
+                    </li>
+                </a>
+                <a href="certification.html">
+                    <li>
+                        Certification
+                    </li>
+                </a>
+                <a href="contact.html">
+                    <li>
+                        Contact
+                    </li>
+                </a>
             </ul>
         </nav>
     </header>
     <main>
         <aside id="picture-banner">
-            <h2>Here is where a picture banner would lie</h2>
+            <img id="aircraft1" src="img/aircraft1.jpg" alt="aircraft">
+            <img id="spacestation" src="img/spacestation1.jpg" alt="spacestation">
+            <img id="hawk-mk-67" src="img/hawk-mk-67.jpg" alt="hawk mk 67">
+            <img id="medsupplies" src="img/awaiting-image.jpg" alt="medical supplies">
+            <div id="banner-overlay">
+                <h2>Quality Assurance</h2>
+            </div>
         </aside>
     </main>
     <footer>
