added text to consultancy and certification sections

--- a/certification.html
+++ b/certification.html
@@ -46,7 +46,22 @@
         </nav>
     </header>
     <main>
-
+        <section class="information">
+            <h2>Certification</h2>
+            <p>Are you an accredited Certification Body seeking additional resources for:</p>
+            <ul>
+                <li>AS9100:2016</li>
+                <li>AS9120:2016</li>
+                <li>ISO9001:2015</li>
+                <li>ISO13485:2016?</li>
+            </ul>
+            <p>Then contact AeroMed QMS and we may be able to help. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex lectus. Duis dolor ante, consectetur nec
+                augue vel, fringilla maximus ipsum. Donec sollicitudin tortor turpis, vel luctus arcu convallis sit amet.
+                Vivamus maximus magna eget massa faucibus condimentum. Curabitur imperdiet aliquet pretium. Vestibulum enim
+                risus, sodales et scelerisque vel, cursus a libero. Donec ut dui nisl. Etiam quis est urna. Aliquam sodales,
+                felis nec aliquam pellentesque, ligula elit mollis felis, non rhoncus ex nunc quis erat.</p>
+        </section>
     </main>
     <footer>
 
