--- a/consultancy.html
+++ b/consultancy.html
@@ -46,7 +46,26 @@
         </nav>
     </header>
     <main>
-
+        <section class="information">
+            <h2>Business/Quality Management Systems</h2>
+            <p>We offer assistance in the design and development of business and quality management systems for your business
+                the following standards:</p>
+            <ul>
+                <li>AS9120:2016</li>
+                <li>AS9100:2016</li>
+                <li>ISO9001:2015</li>
+                <li>ISO13485:2016</li>
+            </ul>
+        </section>
+        <section class="information">
+            <h2>Transitioning</h2>
+            <p>We can help you transition from old standards to any of the standards mentioned above.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ex lectus. Duis dolor ante, consectetur nec
+                augue vel, fringilla maximus ipsum. Donec sollicitudin tortor turpis, vel luctus arcu convallis sit amet.
+                Vivamus maximus magna eget massa faucibus condimentum. Curabitur imperdiet aliquet pretium. Vestibulum enim
+                risus, sodales et scelerisque vel, cursus a libero. Donec ut dui nisl. Etiam quis est urna. Aliquam sodales,
+                felis nec aliquam pellentesque, ligula elit mollis felis, non rhoncus ex nunc quis erat.</p>
+        </section>
     </main>
     <footer>
 
