flesh out content, could not find suitable medical image for picture banner

--- a/consultancy.html
+++ b/consultancy.html
@@ -57,6 +57,7 @@
                 <li>ISO13485:2016</li>
             </ul>
         </section>
+        <img id="infusion-pump" src="img/infusion-pump.jpg" alt="infusion pump">
         <section class="information">
             <h2>Transitioning</h2>
             <p>We can help you transition from old standards to any of the standards mentioned above.</p>
