--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
                 <h2>Quality Assurance</h2>
             </div>
         </aside>
+        <aside id="infocirclescontainer">
+            <aside class="infocircle">
+                <div class="circle">
+                    <img id="isoicon" src="img/iso1.png">
+                </div>
+                <p>Certified in AS and ISO Standards.</p>
+            </aside>
+            <aside class="infocircle">
+                <div class="circle">
+                    <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                </div>
+                <p>Developing QMS Systems.</p>
+            </aside>
+            <aside class="infocircle">
+                <div class="circle">
+                    <i class="fa fa-repeat" aria-hidden="true"></i>
+                </div>
+                <p>Updating Old Standards.</p>
+            </aside>
+        </aside>
     </main>
     <footer>
 
